package com.github.studeasy.dao.jobDAO;

/**
 * The job DAO using a MySQL database
 * Contains all the methods accessing user related data
 */
public class MySQLJobDAO extends JobDAO{
}
