package com.github.studeasy.gui.controller.job;

import javafx.fxml.Initializable;

import java.net.URL;
import java.util.ResourceBundle;

/**
 * Handles the add of job offer
 */
public class AddUpdateJobOfferController implements Initializable {
    @Override
    public void initialize(URL url, ResourceBundle resourceBundle) {

    }
}
