package com.github.studeasy.gui.controller.job;

import javafx.fxml.Initializable;

import java.net.URL;
import java.util.ResourceBundle;

/**
 * Displays one job offer (but not update, conflict with addUpdate ?)
 */
public class SeeJobOfferController implements Initializable {
    @Override
    public void initialize(URL url, ResourceBundle resourceBundle) {

    }
}
