package com.github.studeasy.gui.routers;

/**
 * Router for the job's routes
 */
public class JobRouter extends AbstractRouter{
}
